--- a/style.css
+++ b/style.css
@@ -16,13 +16,16 @@ body {
 
 /* Header Styles */
 header {
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    box-shadow: 3px 10px 15px rgba(0, 0, 0, 0.1);
+    padding: 1rem 5%;
     position: sticky;
     top: 0;
     z-index: 100;
 }
 
 .navbar {
+    color: #333;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -31,11 +34,10 @@ header {
 }
 
 .logo {
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: #6a11cb;
+  max-width: 80px;
+  height: auto;
 }
-
+    
 .nav-links {
     display: flex;
     list-style: none;
@@ -65,8 +67,10 @@ header {
 .hero {
     display: grid;
     align-items: center;
-    padding: 6rem 5%;
-    margin: 6rem 5%;
+    padding: 50px;
+    margin: 50px;
+    border: 2px solid #6a11cb;
+    border-radius: 30px;
 }
 
 .hero h1 {
@@ -77,7 +81,6 @@ header {
 
 .hero p {
     font-size: 1.2rem;
-    max-width: 800px;
     margin: 0 auto 2rem;
     text-align: left;
 }
@@ -120,6 +123,7 @@ header {
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
+    border-radius: solid 2px #6a11cb;
 }
 
 .service-card:hover {
